--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A \"Discord clone\" with Socket.io, Node.js & MongoDB...",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon app.js"
+    "start": "node app.js"
   },
   "repository": {
     "type": "git",
@@ -28,22 +28,22 @@
     "mime-types": "^2.1.24",
     "moment": "^2.24.0",
     "mongodb": "^3.1.13",
-    "mongoose": "^5.5.4",
+    "mongoose": "^5.13.10",
     "multer": "^1.4.1",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^5.0.1",
     "req-flash": "0.0.3",
-    "socket.io": "^2.2.0",
+    "socket.io": "^2.4.1",
     "string.prototype.startswith": "^0.2.0",
     "validator": "^10.11.0"
   },
   "devDependencies": {
-    "eslint": "^5.12.1",
+    "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^13.0.0",
     "eslint-plugin-import": "^2.16.0",
     "install": "^0.12.2",
-    "nodemon": "^1.18.9",
-    "npm": "^6.7.0"
+    "nodemon": "^2.0.13",
+    "npm": "^7.24.2"
   }
 }
